# AI_engineering_Marcus_Ericsson_de24

./: .gitignore  README.md  pyproject.toml
03_gemini/: gemini_api_intro.ipynb
code-alongs/03_gemini/: gemini_api_intro.ipynb
code-alongs/04_pydantic/: pydantic.ipynb  validation_without_pydantic.ipynb
code-alongs/05_pydantic_gemini/: README.md  b_gemini_pydantic_robust}.ipynb
code-alongs/06_fastapi_crud/: api.py  data_processing.py  try_my_api.ipynb
code-alongs/07_a_pydanticai_fundamental/: pydantic_fundamentals.ipynb
code-alongs/07_b_pydantic_fastapi/: agents.py  data_models.py  movies_api.py  setup_db.py  utils.py
code-alongs/08_pydanticai_chatbot/: chat.py  chat_eda.ipynb  frontend.py
code-alongs/09_lancedb_vector_database/: lancedb_explorations.ipynb
code-alongs/10_pydanticai_rags/: exploration.ipynb  ingestion.py  pdfs_to_text.py
exercises/1_pydantic_warmup/: pydantic_warmup.ipynb
exercises/exercise_0/data/: criterias.txt  (+1 more)
video_alongs/03_gemini/: gemini_intro.ipynb
video_alongs/04_pydantic/: pydantic_basic.ipynb  pydantic_pikachu.ipynb
video_alongs/05_pydantic_gemini/: cheap_houses.csv  gemini_pydantic.ipynb  gemini_pydantic_robust_output.ipynb  library.json
video_alongs/06_fastapi_crud/: api.py  constants.py  data_processing.py
video_alongs/07_pydanticAI_fundamental/: cv.duckdb  pydanticai_pydantic_model.ipynb
video_alongs/08_pydanticai_streamlit_chatbot/: chat.py  chat_eda.ipynb  frontend.py
video_alongs/08_pydanticai_taipy_chatbot/: chat.py  chat_eda.ipynb  main.py
video_alongs/09_lancedb_vector_database/: lancedb_basic.ipynb
(+93 files in other folders)
