[project]
name = "ai-engineering-marcus-ericsson-de24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-functions>=1.24.0",
    "dlt[duckdb,parquet]>=1.18.2",
    "duckdb>=1.4.2",
    "fastapi>=0.122.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "lancedb>=0.25.3",
    "matplotlib>=3.10.7",
    "pandas>=2.2.2",
    "phonenumbers>=9.0.19",
    "pydantic-ai>1.23.0",
    "pydantic[email]>=2.12.4",
    "pypdf>=6.4.0",
    "python-dotenv>1.1",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
